# AlphaDebater

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  anti-hallucination.md  architecture.md  configuration.md  data-flow.md  modules.md
prompts/: bear_system.txt  bull_system.txt  cio_system.txt
src/: __init__.py  exceptions.py  main.py
src/agents/: __init__.py  bear_agent.py  bull_agent.py  cio_agent.py  debate_agent.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  base.py  fmp_source.py  news_source.py  sample_source.py  yfinance_source.py
src/graph/: debate_graph.py
src/models/: __init__.py  financial_data.py  messages.py  state.py
src/utils/: __init__.py  anti_concession.py  calculation_tools.py  context_slicer.py  debate_rigor.py  factuality_checker.py  financial_formatter.py  labels.py  llm_client.py  pe_validator.py  printer.py  prompt_loader.py
tests/: test_debate.py
